# light-bot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  bot.py  config.py  docker-compose.yml  last_schedule_hash.txt  main.py  monitor.sh  pyproject.toml  requirements.txt  schedule_service.py  server.py  test_power_status.txt  test_watchdog_status.txt
src/light_bot/: __init__.py  __main__.py  config.py
src/light_bot/api/yasno/: __init__.py  api.py  models.py
src/light_bot/core/: __init__.py  bot.py  server.py
src/light_bot/formatters/: __init__.py  duration_formatter.py  power_status_formatter.py  schedule_formatter.py
src/light_bot/services/: __init__.py  schedule_service.py
tests/: conftest.py  test_bot.py  test_duration_formatter.py  test_schedule_service.py  test_server.py  test_yasno_hass.py
tests/e2e/: README.md  __init__.py  simple_mock_server.py  test_power_monitoring.py  test_schedule_integration.py  test_with_monitor.sh
yasno_hass/: __init__.py  api.py  binary_sensor.py  calendar.py  config_flow.py  const.py  manifest.json  models.py
yasno_hass/translations/: en.json
